# lattice-simd

./: .gitignore  Makefile  README.md  base4d.c  bench2.cpp  bench4.cpp  format.sh  main.cpp  meson.build  s_trans.h  s_trans4.h  test2.cpp  test2d.cpp  test4.cpp  trans4d.c  v128_point.h  v128_point2.h  v128_point2d.h  v128_trans.h  v128_trans2.h  v64_point2.h  v64_trans2.h  v64_trans2d.h  v_trans.h  v_trans4.h
src/: bench2d.cpp  bench2d_scalar.cpp  bench2d_v128.cpp  bench2d_v64.cpp  main.cpp  meson.build  s_trans.h  test2d.cpp  test2d_consistency.cpp  test2d_scalar.cpp  test2d_v128.cpp  test2d_v64.cpp  v128_point2d.h  v128_trans2d.h  v128_walk2d.cpp  v32_trans2d16.h  v64_point2d.h  v64_trans2d.h
